added swagger tags ti supplier
